--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:quiet": "NODE_OPTIONS='--no-warnings' next dev --turbopack 2>&1 | grep -v 'Cache skipped'",
+    "dev:stable": "node dev-server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -13,6 +15,7 @@
   },
   "dependencies": {
     "@deepgram/sdk": "^4.2.0",
+    "@google/generative-ai": "^0.24.1",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
@@ -56,6 +59,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "^15.4.0-canary.51",
     "jest": "^29.7.0",
