--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
-  "buildCommand": "cd frontend && npm run build",
-  "outputDirectory": "frontend/.next",
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next",
   "framework": "nextjs",
   "regions": ["iad1"],
+  "rootDirectory": "frontend",
   "redirects": [
     {
       "source": "/app/(.*)",
