--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,16 +24,20 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.49.8",
     "@tailwindcss/typography": "^0.5.16",
+    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "csv-parse": "^5.6.0",
     "date-fns": "^4.1.0",
+    "eslint": "^9",
+    "eslint-config-next": "^15.4.0-canary.51",
     "framer-motion": "^12.12.2",
     "lucide-react": "^0.511.0",
     "mammoth": "^1.9.1",
     "next": "^15.3.2",
     "next-auth": "^4.24.11",
     "pdf-parse": "^1.1.1",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -44,13 +48,9 @@
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.4",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.25.30",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "eslint": "^9",
-    "eslint-config-next": "^15.4.0-canary.51"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.25.30"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -61,6 +61,8 @@
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-window": "^1.8.8",
+    "@types/react-window-infinite-loader": "^1.0.9",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.3.4",
