--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.4",
+    "stripe": "^18.2.1",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
