Refactor conversation components and enhance testing scripts
- Updated package.json to streamline testing commands and improve coverage options.
- Refactored page.tsx to import database operations and state utilities, enhancing modularity and readability.
- Removed legacy ConversationHeader component to simplify the conversation UI structure.
- Improved LoadingModal to conditionally render based on the isOpen prop, ensuring better performance.
- Added new utility functions for managing conversation states, improving code organization and maintainability.
- Updated dashboard navigation to reflect new URL structure for conversation sessions.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:header": "jest tests/components/conversation/ConversationHeader/",
+    "test:states": "jest tests/components/conversation/ConversationStates/",
+    "test:layout": "jest tests/components/conversation/ConversationLayout/",
+    "test:modals": "jest tests/components/conversation/ConversationModals/",
+    "test:components": "jest tests/components/conversation/",
+    "test:all-refactored": "jest tests/components/conversation/Conversation",
+    "test:debug": "node --inspect-brk ./node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
     "@deepgram/sdk": "^4.2.0",
