Enhance SEO and metadata for landing page
- Updated `TASK.md` to reflect completion of SEO enhancements for the index page, including rich metadata, structured data JSON-LD, robots.txt, and sitemap generation.
- Modified `package.json` to include `next-sitemap` for automated sitemap generation.
- Enhanced `layout.tsx` with Open Graph and Twitter Card metadata for improved social sharing.
- Integrated `SeoJsonLd` component into `page.tsx` to manage structured data for better search engine visibility.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@deepgram/sdk": "^4.2.0",
@@ -51,7 +52,8 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.25.30"
+    "zod": "^3.25.30",
+    "next-sitemap": "^4.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
