--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,12 +37,15 @@
     "mammoth": "^1.9.1",
     "next": "^15.3.2",
     "next-auth": "^4.24.11",
+    "next-sitemap": "^4.2.3",
     "pdf-parse": "^1.1.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-virtualized-auto-sizer": "^1.0.26",
+    "react-virtuoso": "^4.13.0",
     "react-window": "^1.8.11",
     "react-window-infinite-loader": "^1.0.10",
     "rehype-highlight": "^7.0.2",
@@ -52,8 +55,7 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.25.30",
-    "next-sitemap": "^4.2.3"
+    "zod": "^3.25.30"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
