--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "csv-parse": "^5.6.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "^15.4.0-canary.51",
     "framer-motion": "^12.18.1",
