--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -7,6 +7,10 @@
     {
       "path": "/api/cron/sync-bot-status",
       "schedule": "0 */6 * * *"
+    },
+    {
+      "path": "/api/cron/process-webhook-retries",
+      "schedule": "*/5 * * * *"
     }
   ],
   "functions": {
@@ -21,6 +25,9 @@
     },
     "src/app/api/webhooks/recall/status/route.ts": {
       "maxDuration": 30
+    },
+    "src/app/api/cron/process-webhook-retries/route.ts": {
+      "maxDuration": 60
     }
   }
 }
