Update cron job schedule and refactor orphan detection logic
- Changed the cron job schedule for syncing bot status from every 6 hours to every 30 minutes, improving the frequency of status updates.
- Moved the failsafe orphan detection logic to the new cron job, enhancing performance by reducing the impact on webhook processing.
- Updated comments in the code to reflect the new implementation and clarify the purpose of the cron job for future reference.

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -6,7 +6,7 @@
     },
     {
       "path": "/api/cron/sync-bot-status",
-      "schedule": "0 */6 * * *"
+      "schedule": "*/30 * * * *"
     },
     {
       "path": "/api/cron/process-webhook-retries",
