Add Recall.ai configuration to environment and update dependencies
- Added Recall.ai API key and URL to the `.env.example` file for configuration.
- Updated `package.json` and `package-lock.json` to include the `@recallai/desktop-sdk` dependency, ensuring the application can utilize Recall.ai features.
- Enhanced the `NewConversationButton` component to support a dropdown for selecting between meeting options and a desktop recorder, improving user interaction.
- Updated type definitions in `app.ts` to accommodate new recording modes and Recall.ai integration, enhancing type safety and clarity in the application.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@recallai/desktop-sdk": "^2025.6.23-425eeb0809b1dcbef42a7fecef4c80180352f8c2",
     "@stagewise/toolbar-next": "^0.1.2",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
