--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -10,3 +10,7 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 # Supabase Configuration (Required for Authentication)
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url_here
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+
+# Recall.ai Configuration
+RECALL_AI_API_KEY=your_recall_ai_api_key_here
+RECALL_AI_API_URL=https://us-east-1.recall.ai
