--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,6 @@
     "csv-parse": "^5.6.0",
     "date-fns": "^4.1.0",
     "docx": "^8.5.0",
-    "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "^15.4.0-canary.51",
     "framer-motion": "^12.18.1",
@@ -74,9 +73,11 @@
     "@types/react-dom": "^19",
     "@types/react-window": "^1.8.8",
     "@types/react-window-infinite-loader": "^1.0.9",
+    "dotenv": "^16.5.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.3.4",
+    "tsx": "^4.20.3",
     "typescript": "^5"
   }
 }
