Add API documentation section, update package dependencies, and enhance dashboard functionality
- Introduced a new section in CLAUDE.md for API documentation, emphasizing the use of Context7 via Supabase MCP.
- Added the `@radix-ui/react-switch` dependency to package.json and package-lock.json for improved UI components.
- Enhanced the dashboard by integrating calendar event listings and updating the URL management for active paths, improving user navigation.
- Updated the session interface to include new fields for recall bot details, enhancing the session data structure.

These changes collectively improve documentation clarity, enhance UI capabilities, and refine the dashboard experience for users.

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -11,6 +11,10 @@
     {
       "path": "/api/cron/process-webhook-retries",
       "schedule": "*/5 * * * *"
+    },
+    {
+      "path": "/api/calendar/auto-join/worker",
+      "schedule": "* * * * *"
     }
   ],
   "functions": {
@@ -27,6 +31,9 @@
       "maxDuration": 30
     },
     "src/app/api/cron/process-webhook-retries/route.ts": {
+      "maxDuration": 60
+    },
+    "src/app/api/calendar/auto-join/worker/route.ts": {
       "maxDuration": 60
     }
   }
