--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.49.8",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -38,12 +39,14 @@
     "eslint-config-next": "^15.4.0-canary.51",
     "framer-motion": "^12.18.1",
     "html2canvas": "^1.4.1",
+    "jose": "^6.0.11",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.511.0",
     "mammoth": "^1.9.1",
     "next": "^15.3.2",
     "next-auth": "^4.24.11",
     "next-sitemap": "^4.2.3",
+    "node-fetch": "^2.7.0",
     "pdf-parse": "^1.1.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
@@ -62,6 +65,7 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "zod": "^3.25.30"
   },
   "devDependencies": {
