--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -15,6 +15,10 @@
     {
       "path": "/api/calendar/auto-join/worker",
       "schedule": "* * * * *"
+    },
+    {
+      "path": "/api/cron/sync-calendars",
+      "schedule": "*/5 * * * *"
     }
   ],
   "functions": {
@@ -34,6 +38,9 @@
       "maxDuration": 60
     },
     "src/app/api/calendar/auto-join/worker/route.ts": {
+      "maxDuration": 60
+    },
+    "src/app/api/cron/sync-calendars/route.ts": {
       "maxDuration": 60
     }
   }
