--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -22,25 +22,25 @@
     }
   ],
   "functions": {
-    "app/api/cron/monitor-bots/route.ts": {
+    "api/cron/monitor-bots/route.ts": {
       "maxDuration": 60
     },
-    "app/api/cron/sync-bot-status/route.ts": {
+    "api/cron/sync-bot-status/route.ts": {
       "maxDuration": 300
     },
-    "app/api/webhooks/recall/[sessionId]/route.ts": {
+    "api/webhooks/recall/[sessionId]/route.ts": {
       "maxDuration": 30
     },
-    "app/api/webhooks/recall/status/route.ts": {
+    "api/webhooks/recall/status/route.ts": {
       "maxDuration": 30
     },
-    "app/api/cron/process-webhook-retries/route.ts": {
+    "api/cron/process-webhook-retries/route.ts": {
       "maxDuration": 60
     },
-    "app/api/calendar/auto-join/worker/route.ts": {
+    "api/calendar/auto-join/worker/route.ts": {
       "maxDuration": 60
     },
-    "app/api/cron/sync-calendars/route.ts": {
+    "api/cron/sync-calendars/route.ts": {
       "maxDuration": 60
     }
   }
