--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
-# OpenAI API Configuration
-OPENAI_API_KEY=your_openai_api_key_here
+# OpenRouter API Configuration (for AI models)
+OPENROUTER_API_KEY=your_openrouter_api_key_here
 
 # Deepgram API Configuration
 DEEPGRAM_API_KEY=your_deepgram_api_key_here
