Enhance Recall.ai integration and improve bot management in API routes
- Added new environment variables for Recall.ai configuration in the .env.example file, allowing for easier setup.
- Updated package.json to include new scripts for checking and stopping the Recall bot, enhancing development workflow.
- Refactored the end meeting API route to handle additional bot statuses, improving bot management and error logging.
- Enhanced the stop-bot API route to track bot usage and update session status more effectively, ensuring accurate reporting.
- Improved error handling and logging in the RecallAIClient and RecallSessionManager classes for better traceability during bot operations.

These changes collectively enhance the application's integration with Recall.ai, improving bot management and error handling capabilities.

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -7,6 +7,14 @@ DEEPGRAM_API_KEY=your_deepgram_api_key_here
 # Application URL
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
+# Recall.ai Configuration
+RECALL_AI_API_KEY=your_recall_ai_api_key_here
+RECALL_AI_REGION=us-west-2
+RECALL_AI_WEBHOOK_SECRET=your_webhook_secret_here
+
+# For development with ngrok (optional)
+APP_URL=https://your-ngrok-url.ngrok-free.app
+
 # Supabase Configuration (Required for Authentication)
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url_here
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
