--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@deepgram/sdk": "^4.2.0",
     "@heroicons/react": "^2.2.0",
+    "@intercom/messenger-js-sdk": "^0.0.14",
     "@notionhq/client": "^2.2.15",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
