--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -18,3 +18,6 @@ APP_URL=https://your-ngrok-url.ngrok-free.app
 # Supabase Configuration (Required for Authentication)
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url_here
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+
+# Resend Email Configuration (Optional - for email notifications)
+RESEND_API_KEY=your_resend_api_key_here
