--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,6 +61,7 @@
     "react-window-infinite-loader": "^1.0.10",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
+    "resend": "^4.6.0",
     "sonner": "^2.0.4",
     "stripe": "^18.2.1",
     "swr": "^2.3.3",
