--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,13 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.49.8",
     "@tailwindcss/typography": "^0.5.16",
+    "@tiptap/extension-link": "^2.25.0",
+    "@tiptap/extension-placeholder": "^2.25.0",
+    "@tiptap/extension-typography": "^2.25.0",
+    "@tiptap/html": "^2.25.0",
+    "@tiptap/react": "^2.25.0",
+    "@tiptap/starter-kit": "^2.25.0",
+    "@types/marked": "^5.0.2",
     "@types/qrcode": "^1.5.5",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
@@ -46,6 +53,7 @@
     "jspdf": "^2.5.2",
     "lucide-react": "^0.511.0",
     "mammoth": "^1.9.1",
+    "marked": "^16.0.0",
     "next": "^15.3.2",
     "next-auth": "^4.24.11",
     "next-sitemap": "^4.2.3",
@@ -88,6 +96,7 @@
     "dotenv": "^16.5.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "sharp": "^0.34.3",
     "ts-jest": "^29.3.4",
     "tsx": "^4.20.3",
     "typescript": "^5"
