Remove large SQL backup file and update .gitignore to prevent future large file commits

--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,9 @@ logs/
 
 # Temporary files
 tmp/
-temp/ 
+temp/
+
+# Database backups (prevent large files in git)
+**/database_backups/
+*.sql
+!**/migrations/*.sql 
