fix: resolve 'Invalid Date' issue in chat-guidance route
- Updated formatMeetingDate function to handle null/undefined dates gracefully
- Added proper validation for date strings before parsing
- Added null checks before calling formatMeetingDate in various places
- Fixed TypeScript errors related to optional properties
- Function now returns 'No date' for null/undefined and 'Invalid date' for invalid date strings

This resolves the issue where meeting dates were showing as 'Invalid Date' in the chatbot response.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
     "next-auth": "^4.24.11",
     "next-sitemap": "^4.2.3",
     "node-fetch": "^2.7.0",
+    "openai": "^5.9.0",
     "pdf-parse": "^1.1.1",
     "postcss": "^8.5.3",
     "qrcode": "^1.5.4",
