--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -23,6 +23,10 @@
     {
       "path": "/api/cron/sync-calendars",
       "schedule": "*/5 * * * *"
+    },
+    {
+      "path": "/api/cron/process-embeddings",
+      "schedule": "*/15 * * * *"
     }
   ],
   "redirects": [
