feat: add scheduled cleanup task and enhance user subscription handling
- Introduced a new scheduled task for cleaning up recall calls in both backend and frontend configurations, improving system maintenance.
- Enhanced the AdminUsersPage component to display user subscription details, including plan information and status, providing better visibility into user subscriptions.
- Updated various API routes to fetch active user subscriptions and check recording access, ensuring users have the necessary permissions for features.
- Improved the handling of subscription access in the conversation components, prompting users to upgrade if they lack recording access.

These changes collectively enhance the user experience by providing clearer subscription information and maintaining system performance through scheduled tasks.

--- a/vercel.json
+++ b/vercel.json
@@ -33,6 +33,10 @@
     {
       "path": "/api/cron/enforce-bot-limits",
       "schedule": "*/1 * * * *"
+    },
+    {
+      "path": "/api/cron/cleanup-recall-calls",
+      "schedule": "0 0 * * *"
     }
   ]
 } 
