--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -27,6 +27,10 @@
     {
       "path": "/api/cron/process-embeddings",
       "schedule": "*/15 * * * *"
+    },
+    {
+      "path": "/api/cron/cleanup-recall-calls",
+      "schedule": "0 0 * * *"
     }
   ],
   "redirects": [
