feat: update Vercel configuration and enhance LandingPage content for Nova branding
- Added a new scheduled task for the auto-join worker in the Vercel configuration, improving backend functionality.
- Updated references in the LandingPage component to replace "AI Advisor" with "Nova," enhancing brand consistency across the application.
- Revised FAQ content to reflect the new branding, ensuring users receive clear and accurate information about Nova's capabilities.

These changes collectively enhance the user experience by improving backend scheduling and reinforcing the Nova brand identity throughout the application.

--- a/vercel.json
+++ b/vercel.json
@@ -37,6 +37,10 @@
     {
       "path": "/api/cron/cleanup-recall-calls",
       "schedule": "0 0 * * *"
+    },
+    {
+      "path": "/api/calendar/auto-join/worker",
+      "schedule": "*/1 * * * *"
     }
   ]
 } 
