--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,9 @@
   "dependencies": {
     "@deepgram/sdk": "^4.2.0",
     "@heroicons/react": "^2.2.0",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.4.2",
     "@notionhq/client": "^2.2.15",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -39,6 +42,7 @@
     "@tiptap/starter-kit": "^2.25.0",
     "@types/marked": "^5.0.2",
     "@types/qrcode": "^1.5.5",
+    "@types/rss": "^0.0.32",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
@@ -49,6 +53,7 @@
     "eslint": "^9",
     "eslint-config-next": "^15.4.0-canary.51",
     "framer-motion": "^12.18.1",
+    "gray-matter": "^4.0.3",
     "html2canvas": "^1.4.1",
     "jose": "^6.0.11",
     "jspdf": "^2.5.2",
@@ -57,6 +62,7 @@
     "marked": "^16.0.0",
     "next": "^15.3.2",
     "next-auth": "^4.24.11",
+    "next-mdx-remote": "^5.0.0",
     "next-sitemap": "^4.2.3",
     "node-fetch": "^2.7.0",
     "openai": "^5.9.0",
@@ -71,10 +77,15 @@
     "react-virtuoso": "^4.13.0",
     "react-window": "^1.8.11",
     "react-window-infinite-loader": "^1.0.10",
+    "reading-time": "^1.5.0",
     "recharts": "^3.1.0",
     "rehype-highlight": "^7.0.2",
+    "rehype-slug": "^6.0.0",
+    "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
+    "remark-html": "^16.0.1",
     "resend": "^4.6.0",
+    "rss": "^1.2.2",
     "sonner": "^2.0.4",
     "stripe": "^18.2.1",
     "swr": "^2.3.3",
