--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,14 @@
       "argsIgnorePattern": "^_",
       "varsIgnorePattern": "^_"
     }],
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/ban-ts-comment": "off",
+    "react/no-unescaped-entities": "off",
     "react-hooks/exhaustive-deps": "warn",
-    "@next/next/no-img-element": "warn"
+    "react-hooks/rules-of-hooks": "error",
+    "@next/next/no-img-element": "warn",
+    "prefer-const": "warn",
+    "react/display-name": "off",
+    "jsx-a11y/alt-text": "warn"
   }
 }
