--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -31,6 +31,10 @@
     {
       "path": "/api/cron/cleanup-recall-calls",
       "schedule": "0 0 * * *"
+    },
+    {
+      "path": "/api/cron/send-summary-email",
+      "schedule": "*/15 * * * *"
     }
   ],
   "redirects": [
