feat(chrome-extension): update manifest and service worker for public Supabase config
- Removed localhost URL from the manifest to streamline permissions.
- Modified service worker to fetch Supabase configuration without authentication, enhancing accessibility.
- Updated the API route to return Supabase configuration without requiring an auth token, as the keys are public.
- Improved comments for clarity on the changes made to the configuration fetching process.

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -15,7 +15,6 @@
     "https://teams.microsoft.com/*",
     "https://teams.live.com/*",
     "https://*.zoom.us/*",
-    "http://localhost:3000/*",
     "https://*.liveprompt.ai/*"
   ],
   "background": {
@@ -51,7 +50,7 @@
       "css": ["assets/styles/floating-widget.css"]
     },
     {
-      "matches": ["http://localhost:3000/*", "https://liveprompt.ai/*", "https://*.liveprompt.ai/*"],
+      "matches": ["https://liveprompt.ai/*", "https://*.liveprompt.ai/*"],
       "js": ["content-scripts/web-session.js"]
     }
   ],
