feat(chrome-extension): add side panel support and enhance service worker logging
- Updated the manifest to include support for the new side panel feature.
- Enhanced the service worker to open the side panel on extension icon click, improving user interaction.
- Improved logging within the service worker for better tracking of calendar event fetching and token management processes.
- Updated comments for clarity on the new side panel functionality and logging enhancements.

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -8,7 +8,8 @@
     "activeTab",
     "scripting",
     "cookies",
-    "alarms"
+    "alarms",
+    "sidePanel"
   ],
   "host_permissions": [
     "https://meet.google.com/*",
@@ -19,12 +20,14 @@
     "service_worker": "background/service-worker.js"
   },
   "action": {
-    "default_popup": "popup/popup.html",
     "default_icon": {
       "16": "assets/icons/icon-16.png",
       "48": "assets/icons/icon-48.png",
       "128": "assets/icons/icon-128.png"
     }
+  },
+  "side_panel": {
+    "default_path": "sidepanel/sidepanel.html"
   },
   "icons": {
     "16": "assets/icons/icon-16.png",
