--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -52,7 +52,7 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": ["assets/icons/*", "components/*"],
+      "resources": ["assets/icons/*", "components/*", "images/platforms/*"],
       "matches": ["<all_urls>"]
     }
   ]
