--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,8 @@
     "docx": "^8.5.0",
     "eslint": "^9",
     "eslint-config-next": "^15.4.0-canary.51",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^12.18.1",
     "gray-matter": "^4.0.3",
     "html2canvas": "^1.4.1",
